# open-strata

./: .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  deny.toml  dist-workspace.toml  rust-toolchain.toml
.github/: dependabot.yml
crates/ost-artifact/: Cargo.toml
crates/ost-artifact/src/: evidence.rs  lib.rs  policy.rs  record.rs  reference.rs  store.rs
crates/ost-artifact/src/transport/: file.rs  mod.rs  oci.rs  verify.rs
crates/ost-artifact/tests/: transport_pull.rs
crates/ost-build/: Cargo.toml
crates/ost-build/src/: completion.rs  external.rs  glibc.rs  lease.rs  lib.rs  lock.rs  msvc.rs  package.rs  presets.rs  python.rs  target.rs  toolchain.rs
crates/ost-ci/: Cargo.toml
crates/ost-ci/src/: github.rs  lib.rs  matrix.rs  support.rs
crates/ost-cli/: Cargo.toml
crates/ost-cli/src/: main.rs  notify.rs  output.rs  progress.rs  project_template.rs
crates/ost-cli/src/commands/: artifact.rs  build.rs  ci.rs  compiler.rs  configure.rs  devshell.rs  doctor.rs  env.rs  extension.rs  external.rs  formation.rs  init.rs  internal.rs  lock.rs  mod.rs  package.rs  platform.rs  plugin.rs  presets.rs  renderer.rs  runtime.rs  test.rs  uv.rs  validate.rs
crates/ost-cli/tests/: artifact_registry.rs  ci_matrix.rs  dogfooding7.rs  formation.rs  json_contract.rs  lifecycle.rs  runtime_artifact.rs
crates/ost-core/: Cargo.toml
crates/ost-core/src/: catalog.rs  digest.rs  error.rs  fs.rs  host.rs  lib.rs  paths.rs  template.rs  tools.rs  variant.rs
crates/ost-extension/: Cargo.toml
crates/ost-extension/src/: lib.rs  loader.rs  model.rs  resolve.rs
crates/ost-formation/: Cargo.toml
crates/ost-formation/src/: lib.rs
crates/ost-manifest/: Cargo.toml
crates/ost-manifest/src/: lib.rs  lock.rs  project.rs  renderer.rs
crates/ost-platform/: Cargo.toml
crates/ost-platform/src/: diff.rs  lib.rs  loader.rs  model.rs
crates/ost-plugin/: Cargo.toml
crates/ost-plugin/src/: bundle.rs  doctor.rs  levels.rs  lib.rs  library.rs  model.rs  plug_info.rs  report.rs  scaffold.rs  session.rs  verification.rs  version.rs  workspace.rs
crates/ost-runtime/: Cargo.toml
crates/ost-runtime/src/: env.rs  lib.rs  manifest.rs  profile.rs  runtime.rs  validate.rs
docs/: .gitignore  README.md  architecture.md  co-located-schema-migration.md  dcc-hosts.md  design.md  examples.md  incident-notes.md  json-schema.md  overview.md  phase-4-plugin-harness.md  plugin-harness-source.md  remote-artifact-transport.md  roadmap.md
extensions/: materialx.yaml  openusd.yaml
profiles/: core.yaml  dev.yaml  lookdev.yaml  usd.yaml
schemas/: formation-lock.schema.json  formation.schema.json  library.schema.json  lock.schema.json  platform.schema.json  plugin-activation.schema.json  plugin-product.schema.json  plugin-report.schema.json  plugin-verification.schema.json  project.schema.json  renderer-report.schema.json  (+1 more)
templates/cpp-library/: .gitignore  CMakeLists.txt  README.md  openstrata.library.yaml  template.yaml
templates/cpp-library/cmake/: {{Name}}Config.cmake.in
templates/cpp-library/include/{{name}}/: {{name}}.hpp
templates/cpp-library/src/: {{name}}.cpp
templates/plugin-workspace/: CMakeLists.txt  README.md  template.yaml
templates/renderer/: .gitignore  CMakeLists.txt  README.md  openstrata.renderer.yaml  template.yaml
templates/renderer/adapters/headless/: CMakeLists.txt  main.cpp
templates/renderer/adapters/hydra2/: CMakeLists.txt
templates/renderer/adapters/hydra2/resources/: plugInfo.json.in
templates/renderer/adapters/hydra2/src/: adapter.cpp  adapter.hpp  renderer_plugin.cpp
templates/renderer/adapters/hydra2/tests/: plugin_probe.cpp  render_buffer_test.cpp  run_usdview_smoke.cmake  usdview-smoke.usda  usdview_smoke_test.py
templates/renderer/adapters/viewport/: CMakeLists.txt  main.cpp  window.hpp  window_glfw.cpp
templates/renderer/backend/vulkan/: CMakeLists.txt  vulkan_backend.cpp  vulkan_internal.hpp  vulkan_present.cpp
templates/renderer/backend/vulkan/shaders/: triangle.frag  triangle.slang  triangle.vert
templates/renderer/cmake/: {{Name}}Config.cmake.in
templates/renderer/core/render-extraction/: CMakeLists.txt  extraction.cpp
templates/renderer/core/render-world/: CMakeLists.txt  render_world.cpp
templates/renderer/include/{{name}}/: extraction.hpp  render_world.hpp  vulkan_backend.hpp  vulkan_present.hpp
templates/renderer/validation/: CMakeLists.txt  check-core-boundary.cmake.in  run-install-smoke.cmake.in
templates/usd-asset-resolver-cpp/: .gitignore  CMakeLists.txt  README.md  openstrata.plugin.yaml  template.yaml
templates/usd-asset-resolver-cpp/plugin/resources/{{name}}/: plugInfo.json.in
templates/usd-asset-resolver-cpp/src/: {{Name}}Resolver.cpp  {{Name}}Resolver.h
templates/usd-asset-resolver-cpp/tests/fixtures/: referenced.usda
templates/usd-exec-cpp/: .gitignore  CMakeLists.txt  README.md  openstrata.plugin.yaml  template.yaml
templates/usd-exec-cpp/plugin/resources/{{name}}/: plugInfo.json.in
templates/usd-exec-cpp/src/: {{Name}}Computation.cpp  {{Name}}Computation.h  {{Name}}Plugin.cpp
templates/usd-exec-cpp/tests/fixtures/: basic.usda
templates/usd-fileformat-cpp/: CMakeLists.txt  README.md  openstrata.plugin.yaml  template.yaml
templates/usd-fileformat-cpp/plugin/resources/{{name}}/: plugInfo.json  plugInfo.json.in
templates/usd-fileformat-cpp/src/: {{Name}}FileFormat.cpp  {{Name}}FileFormat.h
templates/usd-fileformat-cpp/tests/fixtures/: basic.{{extension}}  invalid.{{extension}}
templates/usd-plugin/: CMakeLists.txt  README.md  template.yaml
templates/usd-plugin/plugin/resources/: plugInfo.json
templates/usd-plugin/src/: {{name}}.cpp
templates/usd-schema-cpp/: CMakeLists.txt  README.md  openstrata.plugin.yaml  schema.usda  template.yaml
templates/usd-schema-cpp/cmake/: {{Name}}Config.cmake.in
templates/usd-schema-cpp/plugin/resources/{{name}}/: generatedSchema.usda  plugInfo.json.in
templates/usd-schema-cpp/tests/consumer/: CMakeLists.txt  main.cpp
templates/usd-schema-cpp/tests/fixtures/: basic.usda
(+95 files in other folders)
