# OpenStrata workspace
# `ost` — VFX Reference Platform aware runtime / build / extension manager.
[workspace]
resolver = "2"
members = [
    "crates/ost-cli",
    "crates/ost-core",
    "crates/ost-platform",
    "crates/ost-manifest",
    "crates/ost-runtime",
    "crates/ost-build",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openstrata/openstrata"
rust-version = "1.69"

[workspace.dependencies]
ost-core = { path = "crates/ost-core" }
ost-platform = { path = "crates/ost-platform" }
ost-manifest = { path = "crates/ost-manifest" }
ost-runtime = { path = "crates/ost-runtime" }
ost-build = { path = "crates/ost-build" }

# Versions are pinned to keep the whole dependency tree on edition <= 2021 so
# the project builds on the pinned Rust 1.69 toolchain. Bump deliberately
# alongside a rust-version bump.
anyhow = "=1.0.86"
thiserror = "=1.0.61"
clap = { version = "=4.3.24", features = ["derive"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
serde_yaml = "=0.9.34"
toml = "=0.8.19"
indexmap = { version = "=2.2.6", features = ["serde"] }
camino = { version = "=1.1.7", features = ["serde1"] }
directories = "=5.0.1"
sha2 = "=0.10.8"
tar = "=0.4.40"
zstd = "=0.13.2"
