# OpenStrata workspace
# `ost` — VFX Reference Platform aware runtime / build / extension manager.
[workspace]
resolver = "2"
members = [
    "crates/ost-cli",
    "crates/ost-core",
    "crates/ost-platform",
    "crates/ost-manifest",
    "crates/ost-runtime",
    "crates/ost-build",
    "crates/ost-extension",
    "crates/ost-plugin",
    "crates/ost-artifact",
    "crates/ost-ci",
]

[workspace.package]
version = "0.14.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/animu-sphere/open-strata"
rust-version = "1.96"

[workspace.dependencies]
ost-core = { path = "crates/ost-core" }
ost-platform = { path = "crates/ost-platform" }
ost-manifest = { path = "crates/ost-manifest" }
ost-runtime = { path = "crates/ost-runtime" }
ost-build = { path = "crates/ost-build" }
ost-extension = { path = "crates/ost-extension" }
ost-plugin = { path = "crates/ost-plugin" }
ost-artifact = { path = "crates/ost-artifact" }
ost-ci = { path = "crates/ost-ci" }

# Top-level dependency versions are pinned for reproducible builds. The tree no
# longer needs to stay on edition <= 2021 (the toolchain is pinned to a current
# stable in rust-toolchain.toml); relax or refresh these deliberately.
anyhow = "=1.0.103"
thiserror = "=2.0.18"
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_yaml = "=0.9.34"
toml = "=0.9.5"
toml_edit = "=0.23.4"
indexmap = { version = "=2.14.0", features = ["serde"] }
camino = { version = "=1.2.4", features = ["serde1"] }
directories = "=6.0.0"
sha2 = "=0.11.0"
tar = "=0.4.46"
zstd = { version = "=0.13.3", features = ["zstdmt"] }
ureq = "=3.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
