[package]
name = "ost-build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenStrata build target model and CMake toolchain/preset generation."

[dependencies]
ost-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
