[package]
name = "ost-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenStrata command-line interface (the `ost` binary)."

[[bin]]
name = "ost"
path = "src/main.rs"

[dependencies]
ost-core.workspace = true
ost-platform.workspace = true
ost-manifest.workspace = true
ost-runtime.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
