[package]
name = "ost-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "OpenStrata command-line interface (the `ost` binary)."

[[bin]]
name = "ost"
path = "src/main.rs"

[dependencies]
ost-core.workspace = true
ost-platform.workspace = true
ost-manifest.workspace = true
ost-runtime.workspace = true
ost-build.workspace = true
ost-extension.workspace = true
ost-plugin.workspace = true
ost-artifact.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
camino.workspace = true
tar.workspace = true
zstd.workspace = true

[dev-dependencies]
# Integration tests reuse the build's own MSVC detection to gate the
# toolchain-dependent lifecycle tests (skip cleanly when VS is absent).
ost-build.workspace = true
