[package]
name = "ost-formation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Digest-pinned cross-repository Formation composition for OpenStrata."

[dependencies]
ost-core.workspace = true
ost-artifact.workspace = true
ost-runtime.workspace = true
ost-plugin.workspace = true
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
