[package]
name = "ost-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenStrata project manifest (openstrata.toml) and lockfile (strata.lock) models."

[dependencies]
ost-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
