[package]
name = "ost-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenStrata plugin bundles: model, loader, static verification, and staged diagnostics."

[dependencies]
ost-core.workspace = true
ost-runtime.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
indexmap.workspace = true
camino.workspace = true
