[package]
name = "ost-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenStrata runtime identity, profiles, and environment generation."

[dependencies]
ost-core.workspace = true
ost-platform.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
camino.workspace = true
